[gd_scene load_steps=10 format=2]

[ext_resource path="res://shared/levelManager/LevelManager.gd" type="Script" id=1]
[ext_resource path="res://shared/attacks/lightAttack/light_ball.png" type="Texture" id=2]
[ext_resource path="res://shared/soul/soul.png" type="Texture" id=3]
[ext_resource path="res://shared/attacks/fireAttack/FireAttack.tscn" type="PackedScene" id=4]
[ext_resource path="res://shared/attacks/iceAttack/IceAttack.tscn" type="PackedScene" id=5]
[ext_resource path="res://shared/attacks/lightningAttack/LightningAttack.tscn" type="PackedScene" id=6]
[ext_resource path="res://shared/attacks/IceFireAttack/IceFireAttack.tscn" type="PackedScene" id=7]
[ext_resource path="res://shared/attacks/fireLightningAttack/FireLightningAttack.tscn" type="PackedScene" id=8]
[ext_resource path="res://shared/attacks/iceLightningAttack/IceLightningAttack.tscn" type="PackedScene" id=9]

[node name="LevelManager" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="HUD" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="NormalAttack" type="Button" parent="HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 410.0
margin_right = 932.0
margin_bottom = 616.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="SpecialAttack" type="Button" parent="HUD" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_top = 410.0
margin_right = 812.0
margin_bottom = 616.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Ball1" type="Sprite" parent="HUD" index="2"]

position = Vector2( 331, 433 )
rotation = 0.00681248
scale = Vector2( 0.25, 0.25 )
_sections_unfolded = [ "Transform" ]

[node name="Ball2" type="Sprite" parent="HUD" index="3"]

position = Vector2( 383, 433 )
scale = Vector2( 0.25, 0.25 )
_sections_unfolded = [ "Transform" ]

[node name="Soul" type="Sprite" parent="HUD" index="4"]

position = Vector2( 25, 25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="SoulsLabel" type="Label" parent="HUD" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.826289, 0.45694, 0.847656, 1 )
custom_colors/font_color_shadow = Color( 0.199219, 0.199219, 0.199219, 1 )
text = "X 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="LightAttackTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="FireAttack" parent="." index="2" instance=ExtResource( 4 )]

[node name="IceAttack" parent="." index="3" instance=ExtResource( 5 )]

[node name="LightningAttack" parent="." index="4" instance=ExtResource( 6 )]

[node name="IceFireAttack" parent="." index="5" instance=ExtResource( 7 )]

position = Vector2( -50, -10 )

[node name="FireLightningAttack" parent="." index="6" instance=ExtResource( 8 )]

[node name="IceLightningAttack" parent="." index="7" instance=ExtResource( 9 )]

_sections_unfolded = [ "Collision", "Material", "Transform", "Visibility" ]

[connection signal="pressed" from="HUD/NormalAttack" to="." method="_on_NormalAttack_pressed"]

[connection signal="pressed" from="HUD/SpecialAttack" to="." method="_on_SpecialAttack_pressed"]


